--- a/app/templates/plants/add.html
+++ b/app/templates/plants/add.html
@@ -33,6 +33,7 @@
         placeholder="e.g., Snake Plant, Monstera"
         maxlength="100"
         aria-describedby="name-help"
+        autocomplete="off"
       />
       <p id="name-help" class="help-text">What kind of plant is this?</p>
     </div>
@@ -50,6 +51,7 @@
         placeholder="e.g., Planty McPlantface"
         maxlength="50"
         aria-describedby="nickname-help"
+        autocomplete="off"
       />
       <p id="nickname-help" class="help-text">Give your plant a fun name!</p>
     </div>
@@ -66,6 +68,7 @@
         class="input"
         placeholder="e.g., Sansevieria trifasciata"
         maxlength="100"
+        autocomplete="off"
       />
     </div>
 
@@ -113,6 +116,7 @@
         rows="4"
         placeholder="Any special care instructions, watering schedule, or observations..."
         maxlength="500"
+        autocomplete="off"
       ></textarea>
     </div>
 
