--- a/app/templates/reminders/create.html
+++ b/app/templates/reminders/create.html
@@ -64,6 +64,7 @@
         placeholder="e.g., Water Monstera"
         required
         aria-describedby="title-help"
+        autocomplete="off"
       />
       <p id="title-help" class="help-text">Give your reminder a descriptive name</p>
     </div>
@@ -117,6 +118,7 @@
         maxlength="500"
         placeholder="Add any special instructions or notes..."
         aria-describedby="notes-help"
+        autocomplete="off"
       ></textarea>
       <p id="notes-help" class="help-text">Optional care instructions or reminders</p>
     </div>
